--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
   "dependencies": {
     "@uvue/core": "^0.1.0-alpha",
     "@uvue/server": "^0.1.0-alpha",
+    "animejs": "^2.2.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "js-cookie": "^2.2.0",
+    "jsonwebtoken": "^8.3.0",
     "register-service-worker": "^1.0.0",
+    "router": "^1.3.3",
     "vue": "^2.5.17",
     "vue-meta": "^1.5.5",
     "vue-router": "^3.0.1",
