--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "router": "^1.3.3",
     "vue": "^2.5.17",
     "vue-meta": "^1.5.5",
+    "vue-no-ssr": "^1.0.0",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
