--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "faker": "^4.1.0",
+    "fastify": "^1.13.0",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.3.0",
     "register-service-worker": "^1.0.0",
