--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ssr:serve": "vue-cli-service ssr:serve",
     "ssr:start": "vue-cli-service ssr:start",
     "ssr:static": "vue-cli-service ssr:static",
-    "test:e2e": "vue-cli-service test:e2e"
+    "test:e2e": "vue-cli-service test:e2e",
+    "now-build": "./build.sh"
   },
   "dependencies": {
     "@uvue/core": "^0.1.0-alpha",
@@ -33,10 +34,8 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^3.0.0",
     "@uvue/vue-cli-plugin-ssr": "^0.1.0-alpha.1",
     "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-e2e-cypress": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.1",
     "@vue/cli-plugin-pwa": "^3.1.1",
     "@vue/cli-service": "^3.1.1",
@@ -48,5 +47,9 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
+  },
+  "peerDependencies": {
+    "@cypress/webpack-preprocessor": "^3.0.0",
+    "@vue/cli-plugin-e2e-cypress": "^3.1.1"
   }
 }
