--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "heroku-postbuild": "vue-cli-service ssr:build"
   },
   "dependencies": {
-    "@uvue/core": "^0.1.0-alpha",
-    "@uvue/server": "^0.1.0-alpha",
+    "@uvue/core": "0.1.0-alpha.7",
+    "@uvue/server": "0.1.0-alpha.7",
     "animejs": "^2.2.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -35,7 +35,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@uvue/vue-cli-plugin-ssr": "^0.1.0-alpha.1",
+    "@uvue/vue-cli-plugin-ssr": "0.1.0-alpha.7",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.1",
     "@vue/cli-plugin-pwa": "^3.1.1",
@@ -43,7 +43,7 @@
     "@vue/eslint-config-prettier": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
+    "eslint-plugin-vue": "^5.0.0",
     "html-loader": "^0.5.5",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
