--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "heroku-postbuild": "vue-cli-service ssr:build"
   },
   "dependencies": {
-    "@uvue/core": "0.1.0-alpha.9",
-    "@uvue/server": "0.1.0-alpha.9",
+    "@uvue/core": "^0.1.0-alpha.11",
+    "@uvue/server": "^0.1.0-alpha.11",
     "animejs": "^2.2.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -35,7 +35,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@uvue/vue-cli-plugin-ssr": "0.1.0-alpha.9",
+    "@uvue/vue-cli-plugin-ssr": "^0.1.0-alpha.11",
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-eslint": "^3.2.1",
     "@vue/cli-plugin-pwa": "^3.2.0",
