--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   },
   "dependencies": {
     "@uvue/core": "^0.1.0-alpha.14",
-    "@uvue/server": "^0.1.0-alpha.14",
+    "@uvue/server": "0.1.0-alpha.16",
     "animejs": "^3.0.1",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "faker": "^4.1.0",
-    "fastify": "^1.13.4",
+    "fastify": "^1.14.1",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.4.0",
     "register-service-worker": "^1.5.2",
     "router": "^1.3.3",
-    "vue": "^2.5.22",
+    "vue": "^2.6.2",
     "vue-meta": "^1.5.8",
     "vue-no-ssr": "^1.1.1",
     "vue-progressbar": "^0.7.5",
@@ -35,19 +35,19 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@uvue/vue-cli-plugin-ssr": "^0.1.0-alpha.14",
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-plugin-pwa": "^3.3.0",
-    "@vue/cli-service": "^3.3.1",
+    "@uvue/vue-cli-plugin-ssr": "0.1.0-alpha.16",
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-plugin-eslint": "^3.4.0",
+    "@vue/cli-plugin-pwa": "^3.4.0",
+    "@vue/cli-service": "^3.4.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.12.1",
+    "eslint": "^5.13.0",
     "eslint-plugin-vue": "^5.1.0",
     "html-loader": "^0.5.5",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.22"
+    "vue-template-compiler": "^2.6.2"
   },
   "peerDependencies": {
     "@cypress/webpack-preprocessor": "^3.0.0",
