--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue-no-ssr": "^1.1.1",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.2",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@uvue/vue-cli-plugin-ssr": "0.1.0-alpha.18",
